# serializer version: 1
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-basic]
  '"price" > 5 AND "status" = \'active\''
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-eq]
  '"value" = 3'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-is_in]
  '"status" IN (\'active\', \'pending\')'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-naive_timestamp]
  '"ts_naive" > ARROW_CAST(\'2024-01-01 00:00:00\', \'Timestamp(Microsecond, None)\')'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-naive_timestamp_and_status]
  '"status" = \'active\' AND "ts_naive" > ARROW_CAST(\'2024-01-01 00:00:00\', \'Timestamp(Microsecond, None)\')'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-neq_and_gt]
  '"value" <> 2 AND "value" > -1'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-or_condition]
  '"value" < 2 OR "value" > 7'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-range]
  '"value" < 8 AND "value" >= 5'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-tz_timestamp]
  '"ts_tz" > ARROW_CAST(\'2024-01-01 00:00:00+00:00\', \'Timestamp(Microsecond, Some("UTC"))\')'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[datafusion-tz_timestamp_and_price]
  '"price" > 5 AND "ts_tz" > ARROW_CAST(\'2024-01-01 00:00:00+00:00\', \'Timestamp(Microsecond, Some("UTC"))\')'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-basic]
  '"price" > 5 AND "status" = \'active\''
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-eq]
  '"value" = 3'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-is_in]
  '"status" IN (\'active\', \'pending\')'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-naive_timestamp]
  '"ts_naive" > MAKE_TIMESTAMP(2024, 1, 1, 0, 0, 0.0)'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-naive_timestamp_and_status]
  '"status" = \'active\' AND "ts_naive" > MAKE_TIMESTAMP(2024, 1, 1, 0, 0, 0.0)'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-neq_and_gt]
  '"value" <> 2 AND "value" > -1'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-or_condition]
  '"value" < 2 OR "value" > 7'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-range]
  '"value" < 8 AND "value" >= 5'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-tz_timestamp]
  '"ts_tz" > MAKE_TIMESTAMPTZ(2024, 1, 1, 0, 0, 0.0, \'UTC\')'
# ---
# name: test_narwhals_expr_to_sql_predicate_outputs[duckdb-tz_timestamp_and_price]
  '"price" > 5 AND "ts_tz" > MAKE_TIMESTAMPTZ(2024, 1, 1, 0, 0, 0.0, \'UTC\')'
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[basic]
  dict({
    'case': 'basic',
    'datafusion_predicate': '"price" > 5 AND "status" = \'active\'',
    'duckdb_predicate': '"price" > 5 AND "status" = \'active\'',
    'ids': list([
      3,
      9,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[eq]
  dict({
    'case': 'eq',
    'datafusion_predicate': '"value" = 3',
    'duckdb_predicate': '"value" = 3',
    'ids': list([
      3,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[is_in]
  dict({
    'case': 'is_in',
    'datafusion_predicate': '"status" IN (\'active\', \'pending\')',
    'duckdb_predicate': '"status" IN (\'active\', \'pending\')',
    'ids': list([
      0,
      2,
      3,
      5,
      6,
      8,
      9,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[naive_timestamp]
  dict({
    'case': 'naive_timestamp',
    'datafusion_predicate': '"ts_naive" > ARROW_CAST(\'2024-01-01 00:00:00\', \'Timestamp(Microsecond, None)\')',
    'duckdb_predicate': '"ts_naive" > MAKE_TIMESTAMP(2024, 1, 1, 0, 0, 0.0)',
    'ids': list([
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[naive_timestamp_and_status]
  dict({
    'case': 'naive_timestamp_and_status',
    'datafusion_predicate': '"status" = \'active\' AND "ts_naive" > ARROW_CAST(\'2024-01-01 00:00:00\', \'Timestamp(Microsecond, None)\')',
    'duckdb_predicate': '"status" = \'active\' AND "ts_naive" > MAKE_TIMESTAMP(2024, 1, 1, 0, 0, 0.0)',
    'ids': list([
      3,
      6,
      9,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[neq_and_gt]
  dict({
    'case': 'neq_and_gt',
    'datafusion_predicate': '"value" <> 2 AND "value" > -1',
    'duckdb_predicate': '"value" <> 2 AND "value" > -1',
    'ids': list([
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[or_condition]
  dict({
    'case': 'or_condition',
    'datafusion_predicate': '"value" < 2 OR "value" > 7',
    'duckdb_predicate': '"value" < 2 OR "value" > 7',
    'ids': list([
      0,
      1,
      8,
      9,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[range]
  dict({
    'case': 'range',
    'datafusion_predicate': '"value" < 8 AND "value" >= 5',
    'duckdb_predicate': '"value" < 8 AND "value" >= 5',
    'ids': list([
      5,
      6,
      7,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[tz_timestamp]
  dict({
    'case': 'tz_timestamp',
    'datafusion_predicate': '"ts_tz" > ARROW_CAST(\'2024-01-01 00:00:00+00:00\', \'Timestamp(Microsecond, Some("UTC"))\')',
    'duckdb_predicate': '"ts_tz" > MAKE_TIMESTAMPTZ(2024, 1, 1, 0, 0, 0.0, \'UTC\')',
    'ids': list([
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
    ]),
  })
# ---
# name: test_predicate_equality_duckdb_datafusion_snapshot[tz_timestamp_and_price]
  dict({
    'case': 'tz_timestamp_and_price',
    'datafusion_predicate': '"price" > 5 AND "ts_tz" > ARROW_CAST(\'2024-01-01 00:00:00+00:00\', \'Timestamp(Microsecond, Some("UTC"))\')',
    'duckdb_predicate': '"price" > 5 AND "ts_tz" > MAKE_TIMESTAMPTZ(2024, 1, 1, 0, 0, 0.0, \'UTC\')',
    'ids': list([
      1,
      3,
      5,
      7,
      9,
    ]),
  })
# ---
